Adding extra explanation for cmds

--- a/tests_module/fixtures/test_config.cfg
+++ b/tests_module/fixtures/test_config.cfg
@@ -2,6 +2,9 @@
 git = git
 create_venv = /usr/bin/python3 -m venv __venv__
 python = __venv__/bin/python
+#
+## FOLLOWING ARE USED AFTER .../python -m
+## DO NOT CHANGE IF DEFINITELY NO NEED TO
 pip = pip
 pip_testpypi = pip --extra-index-url https://test.pypi.org/pypi
 pytest = pytest
@@ -25,7 +28,7 @@ repo_full = %(LABELORD_REPO)s
 # Set envvar LABELORD_BRANCH if you use specific branch/tag
 # (default value is "master")
 branch = %(LABELORD_BRANCH)s
-# Test PyPI project
+# Test PyPI project and name of the module
 testpypiname = labelord_%(CTU_USERNAME)s
 
 [sets]
